@@ -32,6 +32,12 @@
     margin-right: 6px;
 }
 
+.icon-babel-description-img {
+    width: 16px;
+    height: 16px;
+    margin-right: 6px;
+}
+
 .x-combo-list-item {
     min-height: 20px;
 }
