@@ -2,6 +2,7 @@ Changelog for Babel.
 
 Babel 3.0.0-dev
 =====================================
+- [#135] Fixed not found icons
 - [#143] Link to a translation by entering the ID
 - [#134] Added Babel System Events - thanks to Jako <https://github.com/Jako>
 - [#147] Initiated language code standard using IANA's Language Subtag Registry
